generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__expression__tests__expression__binary_exponent_operation.snap
---
source: generator/javascript/src/transform/expression.rs
expression: ast
---
FunctionCall(
    Identifier(
        "Math.pow",
    ),
    [
        Null,
        Null,
    ],
)
