generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__expression__tests__expression__closure_with_last_expression.snap
---
source: generator/javascript/src/transform/expression.rs
expression: ast
---
Closure(
    [
        Variable(
            "foo",
            Null,
        ),
        Return(
            Some(
                Boolean(
                    true,
                ),
            ),
        ),
    ],
)
