generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__expression__tests__expression__closure_with_last_variable.snap
---
source: generator/javascript/src/transform/expression.rs
expression: ast
---
Closure(
    [
        Expression(
            Boolean(
                true,
            ),
        ),
        Variable(
            "foo",
            Null,
        ),
        Return(
            None,
        ),
    ],
)
