generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__expression__tests__expression__identifier.snap
---
source: generator/javascript/src/transform/expression.rs
expression: ast
---
Identifier(
    "foo",
)
