generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__expression__tests__expression__primitive_integer.snap
---
source: generator/javascript/src/transform/expression.rs
expression: ast
---
Number(
    "123",
)
