generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__expression__tests__expression__property_access.snap
---
source: generator/javascript/src/transform/expression.rs
expression: ast
---
PropertyAccess(
    Null,
    "foo",
)
