generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__expression__tests__expression__style.snap
---
source: generator/javascript/src/transform/expression.rs
expression: ast
---
FunctionCall(
    FunctionCall(
        Identifier(
            "$knot.plugin.get",
        ),
        [
            String(
                "style",
            ),
            String(
                "createStyle",
            ),
            String(
                "1.0",
            ),
        ],
    ),
    [
        Object(
            [
                (
                    "foo",
                    Null,
                ),
            ],
        ),
    ],
)
