generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__expression__tests__expression__unary_absolute_operation.snap
---
source: generator/javascript/src/transform/expression.rs
expression: ast
---
FunctionCall(
    Identifier(
        "Math.abs",
    ),
    [
        Null,
    ],
)
